--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
         </div>
         <div class="section">
-            <div class="background-image background-image-fixed" style="background-image : url('https://cdn.pixabay.com/photo/2016/11/29/06/16/apple-1867750_960_720.jpg')"></div>
+            <div class="background-image background-image-fixed" style="background-image : url('https://static.pexels.com/photos/1883/black-and-white-cup-hand-mug.jpg')"></div>
             <div class="container">
                 <div class="row">
                     
