--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
       </div>
     </font>
-    <div class="section"><div class="background-image" style="background-image : url('https://cdn.pixabay.com/photo/2016/03/27/18/54/technology-1283624_960_720.jpg')"></div><div class="container"><div class="row"><div class="col-md-12"><h1>More witty quotes<br><br><br><br></h1></div></div></div></div>
+    <div class="section"><div class="background-image background-image-fixed" style="background-image : url('https://static.pexels.com/photos/90807/pexels-photo-90807.jpeg')"></div><div class="container"><div class="row"><div class="col-md-12"><h1>More witty quotes<br><br><br><br></h1></div></div></div></div>
     <div class="section">
       <div class="container">
         <div class="row">
