--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 scum">
-                        <p>"My type of scum, fearless and inventive"
+                        <p>"This Bounty Hunter is my type of scum, fearless and inventive"
                             <br>
                             <i>- Jabba The Hutt</i>
                         </p>
@@ -141,11 +141,11 @@
                         <p>dan.tor at hotmail.com</p>
                         <hr>
                     </div>
-                    
+
                 </div>
             </div>
         </div>
         <b></b>
-    
+
 
 </body></html>
