--- a/index.html
+++ b/index.html
@@ -8,36 +8,9 @@
         <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
         <link href="danny.css" rel="stylesheet" type="text/css">
     </head><body>
-        <div class="section">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <h1 id="title">Daniel Torres</h1>
-                    </div>
-                    <hr>
-                </div>
-            </div>
-        </div>
-        <div class="section">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 scum">
-                        <p>"This Bounty Hunter is my type of scum, fearless and inventive"
-                            <br>
-                            <i>- Jabba The Hutt</i>
-                        </p>
-                    </div>
-                    <div class="col-md-6">
-                        <h1>About Me</h1>
-                        <p>My name is Daniel Torres, I am from Houston, Texas and I am currently
-                            attending the University of Houston-Downtown. I enjoy tackling new projects
-                            and have a fondness for front end web development.</p>
-                        <hr>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="section">
+        
+        <div class="cover"><div class="navbar"> <div class="container"> <div class="navbar-header"> <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="#"><span>Brand</span></a> </div><div class="collapse navbar-collapse navbar-ex1-collapse"> <ul class="nav navbar-nav navbar-right"> <li class="active"> <a href="#">Home</a> </li><li> <a href="#">Contacts</a> </li></ul> </div></div></div> <div class="cover-image" style="background-image : url('https://static.pexels.com/photos/149246/pexels-photo-149246.jpeg')"></div><div class="container"> <div class="row"> <div class="col-md-12 text-center"> <h1>Daniel Torres</h1> <p>Lorem ipsum dolor sit amet, consectetur adipisici eli.</p><br><br><a class="btn btn-lg btn-default">Click me</a> </div></div></div></div>
+        <div class="section section-info"><div class="container"><div class="row"><div class="col-md-12"><p class="text-left">"This Bounty Hunter is my type of scum, fearless and inventive"&nbsp;<br><br>- Jabba The Hutt</p></div></div></div></div><div class="section"><div class="container"><div class="row"><div class="col-md-8"><p>About Me<br><br>My name is Daniel Torres, a native of Houston, Texas.&nbsp;<br><br>Currently I am attending the Univeristy of Houston- Downtown as a Computer Science Major.&nbsp;<br><br>I enjoy tackling new projects, my main interest revolve around web development and design with some occasional forays into robotics or app development.&nbsp;</p></div><div class="col-md-4"><img src="https://static.pexels.com/photos/79290/black-and-white-code-programming-tech-79290.jpeg" class="img-responsive"></div></div></div></div><div class="section">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
@@ -100,7 +73,8 @@
                         </ul>
                         <p></p>
                         <hr>
-                    </div><div class="col-md-6">
+                    </div>
+                    <div class="col-md-6">
                         <h1>Current Projects</h1>
                         <p>
                             <b>Servysan.mx</b>
@@ -141,11 +115,10 @@
                         <p>dan.tor at hotmail.com</p>
                         <hr>
                     </div>
-
                 </div>
             </div>
         </div>
         <b></b>
-
+    
 
 </body></html>
