--- a/index.html
+++ b/index.html
@@ -60,8 +60,6 @@
             <p></p>
             <li>Bachelor of Science in Computer Science Candidate
               <br>Univeristy of Houston - Downtown, December 2017</li>
-            <p></p>
-            <p></p>
             <li>Associate of Arts, Houston Community College, 2014</li>
             <p></p>
             <h2 class="major">
@@ -123,23 +121,54 @@
           <span class="image main">
             <img src="images/pic03.jpg" alt="">
           </span>
+          <p></p>
           <h3>Servysan.mx</h3>
           <i>Wordpress Site</i>
           <li>A website made for a clients sanitation company. Made using Wordpress,
             Envato Theme, Visual Composer</li>
+          <p></p>
+          <p>
+            <a href="#servysan" class="button">Read More</a>
+          </p>
           <hr>
+          <span class="image main">
+            <img src="images/pic03.jpg" alt="">
+          </span>
           <h3>OkayMunchy.com</h3>
           <i>School Project Site</i>
           <li>A website made for CS 4318, Theory Database &amp; File Structures. It
             is made using Pingendo Bootstrap Editor. It is a database site that hosts
             several food and drink locations</li>
+          <p></p>
+          <p>
+            <a href="#okm" class="button">Read More</a>
+          </p>
           <hr>
+          <span class="image main">
+            <img src="images/pic03.jpg" alt="">
+          </span>
           <h3>DanielTorres.paperplane.io</h3>
           <i>Personal Website</i>
           <li>Personal Website used to showcase resume and other projects. I update
             it as often as I can, always implementing new concepts I've learned. Current
             iteration (2017) is made with a mix of a template, Pingendo Bootstrap Editor,
             and few custom lines for added functionality.</li>
+          <p></p>
+          <p>
+            <a href="#dan" class="button">Read More</a>
+          </p>
+          <hr>
+          <span class="image main">
+            <img src="images/pic03.jpg" alt="">
+          </span>
+          <h3>Dungeon Master's World Edit</h3>
+          <i>Java Application</i>
+          <li>A small Java project used to learn java and also work on a personal Dungeons
+            &amp; Dragons app.</li>
+          <p></p>
+          <p>
+            <a href="#dmwe" class="button">Read More</a>
+          </p>
         </article>
         <!-- Contact -->
         <article id="contact">
@@ -452,10 +481,54 @@
             </form>
           </section>
         </article>
-        <article>
+        <!--Project Pages begin here-->
+        <article id="servysan">
           <center>
-            <h1>Hello</h1>
+            <h1>Servysan</h1>
           </center>
+          <span class="image main">
+            <img src="images/pic03.jpg" alt="">
+          </span>
+          <h2 class="major">The Project</h2>
+          <p>Servysan is a freelance contract for a sanitation company based in Puebla,
+            Mexico. Servysan prides itself in its commitment to their environment and
+            the quality of their services.</p>
+          <p>The client needed a site for their company that emphasize what they offer
+            while being relevant to their commitment to the environment. They had settled
+            on a leaf and bright green to be the design motifs for their company but
+            felt their image as a company lacking.</p>
+          <h2 class="major">Research &amp; Development</h2>
+          <p>To start, I had to scrap the original logo provided as it was a non-vector
+            image that was already too blurry. I collaborated with Nicole R.T from
+            Old St Nick to help me redesign their logo into something more web friendly.
+            <span class="image main">
+              <img src="images/pic03.jpg" alt="">
+              </span>Next was color. I opted to tone down the bright green they gave me and
+              chose more earth tones to keep in line in what they want to represent.</p>
+        </article>
+        <article id="okm">
+          <center>
+            <h1>Okay Munchy</h1>
+          </center>
+          <span class="image main">
+            <img src="images/pic03.jpg" alt="">
+          </span>
+        </article>
+        <article id="dan">
+          <center>
+            <h1>Daniel Torres</h1>
+          </center>
+          <span class="image main">
+            <img src="images/pic03.jpg" alt="">
+          </span>
+        </article>
+        <article id="dmwe">
+          <center>
+            <h1>DM World Edit</h1>
+          </center>
+          <span class="image main">
+            <img src="images/pic03.jpg" alt="">
+          </span>
         </article>
       </div>
       <!-- Footer -->
