--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         <nav>
           <ul>
             <li>
-              <a href="#intro">About</a>
+              <a href="#about">About</a>
             </li>
             <li>
-              <a href="#work">Experience</a>
+              <a href="#exp">Experience</a>
             </li>
             <li>
-              <a href="#about">Projects</a>
+              <a href="#projects">Projects</a>
             </li>
             <li>
               <a href="#contact">Contact</a>
@@ -45,7 +45,7 @@
       <!-- Main -->
       <div id="main">
         <!-- Intro -->
-        <article id="intro">
+        <article id="about">
           <h2 class="major">About</h2>
           <span class="image main">
             <img src="images/pic01.jpg" alt="">
@@ -57,23 +57,23 @@
           <h2 class="major">
             <b>Education</b>
             </h2>
-            <p></p>
-            <li>Bachelor of Science in Computer Science Candidate
-              <br>Univeristy of Houston - Downtown, December 2017</li>
-            <li>Associate of Arts, Houston Community College, 2014</li>
-            <p></p>
+            <ul>
+              <li>Bachelor of Science in Computer Science Candidate
+                <br>Univeristy of Houston - Downtown, December 2017</li>
+              <li>Associate of Arts, Houston Community College, 2014</li>
+            </ul>
             <h2 class="major">
               <b>Skills</b>
             </h2>
-            <p></p>
-            <li>Fluent in Spanish</li>
-            <li>Programming Languages: C++, Java, HTML, CSS, JavaScript, Visual Basic</li>
-            <li>PC Maintance</li>
-            <li>Wordpress</li>
-            <p></p>
+            <ul>
+              <li>Fluent in Spanish</li>
+              <li>Programming Languages: C++, Java, HTML, CSS, JavaScript, Visual Basic</li>
+              <li>PC Maintance</li>
+              <li>Wordpress</li>
+            </ul>
         </article>
         <!-- Work -->
-        <article id="work">
+        <article id="exp">
           <h2 class="major">Work Experience</h2>
           <span class="image main">
             <img src="images/pic02.jpg" alt="">
@@ -116,7 +116,7 @@
           <br>Lead Designer for Wordpress sites, some marketing and performed PC maintenance.</article>
         <!--
         About -->
-        <article id="about">
+        <article id="projects">
           <h2 class="major">Projects</h2>
           <span class="image main">
             <img src="images/pic03.jpg" alt="">
@@ -505,44 +505,80 @@
               <img src="images/pic03.jpg" alt="">
               </span>Next was color. I opted to tone down the bright green they gave me and
               chose more earth tones to keep in line in what they want to represent.</p>
-        </article>
-        <article id="okm">
+          <ul>
+            <li>Accent Color: #8CA031</li>
+            <li>Banner Color: #141414</li>
+            <li>Background Color: #ffffff</li>
+            <li>Font Color: ##000000</li>
+          </ul>
           <center>
-            <h1>Okay Munchy</h1>
+            <a href="#about" class="button small">About</a>
+            <a href="#exp" class="button small">Experience</a>
+            <a href="#projects" class="button small">Projects</a>
+            <a href="#contact" class="button small">Contact</a>
           </center>
-          <span class="image main">
-            <img src="images/pic03.jpg" alt="">
-          </span>
         </article>
-        <article id="dan">
-          <center>
-            <h1>Daniel Torres</h1>
-          </center>
-          <span class="image main">
-            <img src="images/pic03.jpg" alt="">
-          </span>
-        </article>
-        <article id="dmwe">
-          <center>
-            <h1>DM World Edit</h1>
-          </center>
-          <span class="image main">
-            <img src="images/pic03.jpg" alt="">
-          </span>
-        </article>
+        <font color#8ca031<="" li="">
+          <article id="okm">
+            <center>
+              <h1>Okay Munchy</h1>
+            </center>
+            <span class="image main">
+              <img src="images/pic03.jpg" alt="">
+            </span>
+            <center>
+              <a href="#about" class="button small">About</a>
+              <a href="#exp" class="button small">Experience</a>
+              <a href="#projects" class="button small">Projects</a>
+              <a href="#contact" class="button small">Contact</a>
+            </center>
+          </article>
+          <article id="dan">
+            <center>
+              <h1>Daniel Torres</h1>
+            </center>
+            <span class="image main">
+              <img src="images/pic03.jpg" alt="">
+            </span>
+            <center>
+              <a href="#about" class="button small">About</a>
+              <a href="#exp" class="button small">Experience</a>
+              <a href="#projects" class="button small">Projects</a>
+              <a href="#contact" class="button small">Contact</a>
+            </center>
+          </article>
+          <article id="dmwe">
+            <center>
+              <h1>DM World Edit</h1>
+            </center>
+            <span class="image main">
+              <img src="images/pic03.jpg" alt="">
+            </span>
+            <center>
+              <a href="#about" class="button small">About</a>
+              <a href="#exp" class="button small">Experience</a>
+              <a href="#projects" class="button small">Projects</a>
+              <a href="#contact" class="button small">Contact</a>
+            </center>
+          </article>
+        </font>
       </div>
-      <!-- Footer -->
-      <footer id="footer">
-        <p class="copyright">© Daniel Torres. 2017</p>
-      </footer>
+      <font color#8ca031<="" li="">
+        <!-- Footer -->
+        <footer id="footer">
+          <p class="copyright">© Daniel Torres. 2017</p>
+        </footer>
+      </font>
     </div>
-    <!-- BG -->
-    <div id="bg"></div>
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/skel.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+    <font color#8ca031<="" li="">
+      <!-- BG -->
+      <div id="bg"></div>
+      <!-- Scripts -->
+      <script src="assets/js/jquery.min.js"></script>
+      <script src="assets/js/skel.min.js"></script>
+      <script src="assets/js/util.js"></script>
+      <script src="assets/js/main.js"></script>
+    </font>
   
 
 </body></html>
