--- a/index.html
+++ b/index.html
@@ -525,6 +525,17 @@
           <span class="image main">
             <img src="images/pic03.jpg" alt="">
           </span>
+          <p>Okay Munchy is a website for my Database Theory class. The main focus
+            of it is to display map and other relevant information over restaurants,
+            coffee shops, and bars near our campus.</p>
+          <p>We split the website in two parts. A database back end that handles the
+            data and a front end that allows users to easily see the data being displayed.
+            My contribution for the projected involved working on the front end of
+            the website.</p>
+          <p>My main focus when designing the front end was ease of use. I implemented
+            various techniques to bring the site to life like: large font for easier
+            reading. A good color palette to liven up the site and large icons to help
+            users know what they are clicking.</p>
           <center>
             <a href="#about" class="button small">About</a>
             <a href="#exp" class="button small">Experience</a>
@@ -539,6 +550,12 @@
           <span class="image main">
             <img src="images/pic03.jpg" alt="">
           </span>
+          <p>This site is my resume/portfolio site intended to showcase my work. I
+            try my best to update it with content and to continue to make improvements
+            on the site itself.</p>
+          <p>Sites like github are important for showcasing work but I also feel like
+            having a personal site makes things better and more relatable rather than
+            a series of green squares plasterd across a calendar.</p>
           <center>
             <a href="#about" class="button small">About</a>
             <a href="#exp" class="button small">Experience</a>
@@ -553,6 +570,19 @@
           <span class="image main">
             <img src="images/pic03.jpg" alt="">
           </span>
+          <p>
+           Dungeon Masters World Edit <i>(DMWE)</i> was a project born out the love (and frusturation) of playing Dungeons &amp; Dragons
+           with family and friends. Generating NPC is a tedious process only made more difficult when a DM needs to keep track of them
+           during the course of a game. What started as a small app for creating simple NPCs quickly balloned into something larger.
+          </p>
+          <p>
+            In its current iteration DMWE can now make simple NPCs and Items in addition with the ability to roll loot dice for
+            generic items. 
+          </p>
+          <p>
+            The future of DMWE will include a clean UI instead of command line code with more complex code to handle random generation of NPCs and Items as opposed 
+            to manual creation. 
+          </p>
           <center>
             <a href="#about" class="button small">About</a>
             <a href="#exp" class="button small">Experience</a>
