--- a/index.html
+++ b/index.html
@@ -170,8 +170,17 @@
             <a href="#dmwe" class="button">Read More</a>
           </p>
         </article>
-        <!-- Contact -->
+        <!--New Contact-->
         <article id="contact">
+          <h2 class="major">Contact</h2>
+          <p>Daniel Torres - Houston, TX
+            <br>dan.tor at hotmail.com
+            <br>
+            <a href="https://github.com/Dan-Tor" class="icon fa-github"><span class="label">GitHub</span></a>
+          </p>
+        </article>
+        <!-- Contact -->
+        <article id="null">
           <h2 class="major">Contact</h2>
           <form method="post" action="#">
             <div class="field half first">
@@ -570,19 +579,17 @@
           <span class="image main">
             <img src="images/pic03.jpg" alt="">
           </span>
-          <p>
-           Dungeon Masters World Edit <i>(DMWE)</i> was a project born out the love (and frusturation) of playing Dungeons &amp; Dragons
-           with family and friends. Generating NPC is a tedious process only made more difficult when a DM needs to keep track of them
-           during the course of a game. What started as a small app for creating simple NPCs quickly balloned into something larger.
-          </p>
-          <p>
-            In its current iteration DMWE can now make simple NPCs and Items in addition with the ability to roll loot dice for
-            generic items. 
-          </p>
-          <p>
-            The future of DMWE will include a clean UI instead of command line code with more complex code to handle random generation of NPCs and Items as opposed 
-            to manual creation. 
-          </p>
+          <p>Dungeon Masters World Edit
+            <i>(DMWE)</i>was a project born out the love (and frusturation) of playing
+            Dungeons &amp; Dragons with family and friends. Generating NPC is a tedious
+            process only made more difficult when a DM needs to keep track of them
+            during the course of a game. What started as a small app for creating simple
+            NPCs quickly balloned into something larger.</p>
+          <p>In its current iteration DMWE can now make simple NPCs and Items in addition
+            with the ability to roll loot dice for generic items.</p>
+          <p>The future of DMWE will include a clean UI instead of command line code
+            with more complex code to handle random generation of NPCs and Items as
+            opposed to manual creation.</p>
           <center>
             <a href="#about" class="button small">About</a>
             <a href="#exp" class="button small">Experience</a>
