--- a/index.html
+++ b/index.html
@@ -102,18 +102,20 @@
             in increased computer performance.</li>
           <hr>
           <h2 class="major">Additional Experience</h2>
-          <h3>HackHouston: Hackathon Participant. 2017</h3>
-          <i>Attended HackHouston 2017 hosted by TSU</i>
-          <br>Collaborated with a group, showcasing some basic HTML, CSS and some front
-          end design priciples I am familiar with.
+          <h3>Code for Good Participant, 2017 hosted by JP Morgan</h3>
+          <p>Built a responsive website to help facilitate volunteer sign up for SEARCH: Homelessness Services.</p>
+          <h3>HackRice 7: Hackathon Participant, 2017 hosted by Rice University</h3>
+          <p>Won Best Design and Best Use of Microsoft Azure.
+          Lead and managed a group that built a responsive disaster relief
+          and information site using multiple languages and apis.</p>
+          <h3>HackHouston: Hackathon Participant, 2017 hosted by TSU</h3>
+          <p>>Collaborated with a group, showcasing  basic HTML, CSS and front end design principles I’ve learned.</p>
           <hr>
-          <h3>Code Red: Hackathon Participant. 2016</h3>
-          <i>Attended Code Red Hackathon 2016 hosted by University of Houston.</i>
-          <br>Downloaded and configured a twitter bot to respond with simple phrases.
+          <h3>Code Red: Hackathon Participant, 2016 hosted by University of Houston</h3>
+          <p>Downloaded and configured a twitter bot to respond with simple phrases.</p>
           <hr>
           <h3>Co-Founder of ThisBytes! PC Repair, 2014</h3>
-          <i>Co-founded a PC repair start up with a friend.</i>
-          <br>Lead Designer for Wordpress sites, some marketing and performed PC maintenance.</article>
+          <p>Lead Designer for Wordpress sites, some marketing and performed PC maintenance.</p></article>
         <!--
         About -->
         <article id="projects">
@@ -610,6 +612,6 @@
     <script src="assets/js/skel.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
-  
+
 
 </body></html>
