Exp Small Edits
just small edits on exp page

--- a/index.html
+++ b/index.html
@@ -104,12 +104,14 @@
           <h2 class="major">Additional Experience</h2>
           <h3>Code for Good Participant, 2017 hosted by JP Morgan</h3>
           <p>Built a responsive website to help facilitate volunteer sign up for SEARCH: Homelessness Services.</p>
+          <hr>
           <h3>HackRice 7: Hackathon Participant, 2017 hosted by Rice University</h3>
           <p>Won Best Design and Best Use of Microsoft Azure.
           Lead and managed a group that built a responsive disaster relief
           and information site using multiple languages and apis.</p>
+          <hr>
           <h3>HackHouston: Hackathon Participant, 2017 hosted by TSU</h3>
-          <p>>Collaborated with a group, showcasing  basic HTML, CSS and front end design principles I’ve learned.</p>
+          <p>Collaborated with a group, showcasing  basic HTML, CSS and front end design principles I’ve learned.</p>
           <hr>
           <h3>Code Red: Hackathon Participant, 2016 hosted by University of Houston</h3>
           <p>Downloaded and configured a twitter bot to respond with simple phrases.</p>
